<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:elevation="10dp"
    app:cardMaxElevation="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card"
        style="@style/parent_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/default_lesson_title"
            android:textColor="@color/secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_lesson_date"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_default"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/default_lesson_image_description"
            android:src="@drawable/gi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/default_lesson_image2_description"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/img_default"
            app:layout_constraintStart_toEndOf="@id/img_default"
            app:layout_constraintTop_toTopOf="@id/img_default" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/default_lesson_image3_description"
            android:src="@drawable/shin_guard"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/img1"
            app:layout_constraintStart_toEndOf="@id/img1"
            app:layout_constraintTop_toTopOf="@id/img1" />

        <TextView
            android:id="@+id/participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
