<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".menu.MenuFragment">

    <data>

        <variable
            name="viewmodel"
            type="com.gregorchristiaens.introduction.menu.MenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/parent_container">

        <ImageView
            android:id="@+id/logo_group"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/multi_logo_description"
            android:src="@drawable/logo_group"
            app:layout_constraintBottom_toTopOf="@id/beekeeping"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/beekeeping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="20dp"
            android:text="@string/beekeeping"
            android:textColor="@color/primary"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/karate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_group"
            app:layout_constraintVertical_chainStyle="packed"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/karate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="20dp"
            android:text="@string/karate"
            android:textColor="@color/primary"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/code_fever"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beekeeping"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/code_fever"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="20dp"
            android:text="@string/codefever"
            android:textColor="@color/primary"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/karate"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="20dp"
            android:text="@string/profile"
            android:textColor="@color/primary"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/code_fever"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="@{() -> viewmodel.logout()}"
            android:padding="20dp"
            android:text="@string/logout"
            android:textColor="@color/primary"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>