<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".register.RegisterFragment">

    <data>

        <variable
            name="viewmodel"
            type="com.gregorchristiaens.introduction.register.RegisterViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout style="@style/parent_container">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.4"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressbar"
            style="@style/progress_spinner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header"
            style="@style/header"
            android:layout_marginBottom="15dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="@+id/bow"
            app:layout_constraintEnd_toStartOf="@id/guide_vertical"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <ImageView
            android:id="@+id/bow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/image_karate_bow"
            android:src="@drawable/bow"
            app:layout_constraintBottom_toTopOf="@id/displayNameField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="200dp"
            app:layout_constraintStart_toEndOf="@id/guide_vertical"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/displayNameField"
            style="@style/input_name"
            android:layout_marginTop="15dp"
            android:hint="@string/display_name"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bow">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/displayNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={viewmodel.displayName}"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailField"
            style="@style/input_email"
            android:layout_marginTop="15dp"
            android:hint="@string/email_address"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/displayNameField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={viewmodel.email}"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField"
            style="@style/input_password"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewmodel.password}"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeatPasswordField"
            style="@style/input_password"
            android:layout_marginTop="15dp"
            android:hint="@string/repeat_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordField"
            tools:ignore="TextContrastCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeatPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewmodel.repeatPassword}"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            style="@style/button_primary"
            android:layout_marginTop="15dp"
            android:onClick="@{()-> viewmodel.register()}"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeatPasswordField"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            style="@style/button_text_secondary"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>