<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".KarateClubFragment">

    <data>

        <variable
            name="viewmodel"
            type="com.gregorchristiaens.introduction.karateclub.KarateClubViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/parent_container">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/question"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/karate_club_question"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/karate_club_code"
            style="@style/input_name"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@id/qr_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={viewmodel.karateClubCode}" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/qr_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/qr_code_description"
            android:onClick="@{()-> viewmodel.scanQrCode()}"
            android:src="@drawable/qr_code_scanner_24"
            app:layout_constraintBottom_toBottomOf="@id/karate_club_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_min="40dp"
            app:layout_constraintTop_toTopOf="@id/karate_club_code"
            app:layout_constraintWidth_min="40dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/joinKarateClub"
            style="@style/button_primary"
            android:layout_marginTop="10dp"
            android:text="@string/karate_club_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/karate_club_code" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
